# Advent_of_Code

./: Cargo.toml  perf.data  perf.data.old  test.perf
src/: lib.rs  main.rs
src/aoc_2015/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  mod.rs
src/aoc_2016/: day_01.rs  mod.rs
src/aoc_2022/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  mod.rs
src/aoc_2023/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  mod.rs
src/aoc_2025/: day_01.rs  day_02.rs  day_03.rs  mod.rs
src/utils/: mod.rs
