[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.4"
md-5 = "0.10.4"
regex = "1.6.0"
serde_json = "1.0.85"

[features]
2015_base = []
2015_01 = ["2015_base"]
2015_02 = ["2015_base"]
2015_03 = ["2015_base"]
2015_04 = ["2015_base"]
2015_05 = ["2015_base"]
2015_06 = ["2015_base"]
2015_07 = ["2015_base"]
2015_08 = ["2015_base"]
2015_09 = ["2015_base"]
2015_10 = ["2015_base"]
2015_11 = ["2015_base"]
2015_12 = ["2015_base"]
2015_13 = ["2015_base"]
2015_14 = ["2015_base"]
2015_15 = ["2015_base"]
2015_16 = ["2015_base"]
2015_17 = ["2015_base"]
2015_18 = ["2015_base"]
2015_19 = ["2015_base"]
2015_20 = ["2015_base"]
2015_21 = ["2015_base"]
2015_22 = ["2015_base"]
2015_23 = ["2015_base"]
2015_24 = ["2015_base"]
2015_25 = ["2015_base"]
2015_all = ["2015_01", "2015_02", "2015_01", "2015_03", "2015_04", "2015_05", "2015_06", "2015_07", "2015_08", "2015_09", "2015_10", "2015_11", "2015_12", "2015_13", "2015_14", "2015_15", "2015_16", "2015_17", "2015_18", "2015_19", "2015_20", "2015_21", "2015_22", "2015_23", "2015_24", "2015_25"]

2022_base = []
2022_01 = ["2022_base"]
