[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10.4", optional = true}
md-5 = { version = "0.10.4", optional = true}
regex = { version = "1.6.0", optional = true}
serde_json = { version = "1.0.85", optional = true}

[features]
2015_base = []
2015_01 = ["2015_base"]
2015_02 = ["2015_base"]
2015_03 = ["2015_base"]
2015_04 = ["2015_base"]
2015_05 = ["2015_base"]
2015_06 = ["2015_base"]
2015_07 = ["2015_base"]
2015_08 = ["2015_base"]
2015_09 = ["2015_base"]
2015_10 = ["2015_base"]
2015_11 = ["2015_base"]
2015_12 = ["2015_base"]
2015_13 = ["2015_base"]
2015_14 = ["2015_base"]
2015_15 = ["2015_base"]
2015_16 = ["2015_base"]
2015_17 = ["2015_base"]
2015_18 = ["2015_base"]
2015_19 = ["2015_base"]
2015_20 = ["2015_base"]
2015_21 = ["2015_base"]
2015_22 = ["2015_base"]
2015_23 = ["2015_base"]
2015_24 = ["2015_base"]
2015_25 = ["2015_base"]
2015_all = ["2015_01", "2015_02", "2015_01", "2015_03", "2015_04", "2015_05", "2015_06", "2015_07", "2015_08", "2015_09", "2015_10", "2015_11", "2015_12", "2015_13", "2015_14", "2015_15", "2015_16", "2015_17", "2015_18", "2015_19", "2015_20", "2015_21", "2015_22", "2015_23", "2015_24", "2015_25"]

2016_base = []
2016_01 = ["2016_base"]
2016_02 = ["2016_base"]
2016_03 = ["2016_base"]
2016_04 = ["2016_base"]
2016_05 = ["2016_base"]
2016_06 = ["2016_base"]
2016_07 = ["2016_base"]
2016_08 = ["2016_base"]
2016_09 = ["2016_base"]
2016_10 = ["2016_base"]
2016_11 = ["2016_base"]
2016_12 = ["2016_base"]
2016_13 = ["2016_base"]
2016_14 = ["2016_base"]
2016_15 = ["2016_base"]
2016_16 = ["2016_base"]
2016_17 = ["2016_base"]
2016_18 = ["2016_base"]
2016_19 = ["2016_base"]
2016_20 = ["2016_base"]
2016_21 = ["2016_base"]
2016_22 = ["2016_base"]
2016_23 = ["2016_base"]
2016_24 = ["2016_base"]
2016_25 = ["2016_base"]
2016_all = ["2016_01", "2016_02", "2016_01", "2016_03", "2016_04", "2016_05", "2016_06", "2016_07", "2016_08", "2016_09", "2016_10", "2016_11", "2016_12", "2016_13", "2016_14", "2016_15", "2016_16", "2016_17", "2016_18", "2016_19", "2016_20", "2016_21", "2016_22", "2016_23", "2016_24", "2016_25"]

2022_base = []
2022_01 = ["2022_base"]
2022_02 = ["2022_base"]
2022_03 = ["2022_base"]
2022_04 = ["2022_base"]
2022_05 = ["2022_base"]
2022_06 = ["2022_base"]
